force-app/main/default/objects/Account/fields/DataMigrationHistory__c.field-meta.xml
<CustomField>
    <fullName>DataMigrationHistory__c</fullName>
    <description>Field to store the data migration history, to keep track when data was updated, by who and why it was updated.</description>
    <label>Data Migration History</label>
    <type>TextArea</type>
</CustomField>