force-app/main/default/objects/Account/fields/Default_Bill_to_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_Bill_to_ID__c</fullName>
    <formula>DefaultBillto__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Bill to ID</label>
    <type>Text</type>
</CustomField>