force-app/main/default/objects/Account/fields/DefaultBillto__c.field-meta.xml
<CustomField>
    <fullName>DefaultBillto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Bill to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Default Bill to)</relationshipLabel>
    <relationshipName>DefaultBillto</relationshipName>
    <type>Lookup</type>
</CustomField>