force-app/main/default/objects/Account/fields/DefaultShipTo__c.field-meta.xml
<CustomField>
    <fullName>DefaultShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Ship to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Default ship to)</relationshipLabel>
    <relationshipName>Defaultshipto</relationshipName>
    <type>Lookup</type>
</CustomField>