force-app/main/default/objects/Account/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Integration factory. Is deleted in that system?</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>