force-app/main/default/objects/Account/fields/DeliveryRouting__c.field-meta.xml
<CustomField>
    <fullName>DeliveryRouting__c</fullName>
    <description>This information is mandatory for Förlagssystem in the shipping messages sent from integrations.</description>
    <label>Delivery Routing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DeliveryRouting</valueSetName>
    </valueSet>
</CustomField>