force-app/main/default/objects/Account/fields/DigitalActivationEmail__c.field-meta.xml
<CustomField>
    <fullName>DigitalActivationEmail__c</fullName>
    <inlineHelpText>Default address for sending out activation notifications.</inlineHelpText>
    <label>Digital Activation Email</label>
    <type>Email</type>
</CustomField>