force-app/main/default/objects/Account/fields/DoRelatedAccountsHaveErrors__c.field-meta.xml
<CustomField>
    <fullName>DoRelatedAccountsHaveErrors__c</fullName>
    <formula>OR(AND(DefaultBillto__c &lt;&gt; null,DefaultBillto__r.ValidateErrors__c=true), AND(DefaultShipTo__c &lt;&gt; null,DefaultShipTo__r.ValidateErrors__c=true), AND(PurchasingGroup__c &lt;&gt; null,PurchasingGroup__r.ValidateErrors__c=true))</formula>
    <label>Do Related Accounts Have Errors</label>
    <type>Checkbox</type>
</CustomField>