force-app/main/default/objects/Account/fields/ECIN_Merge__c.field-meta.xml
<CustomField>
    <fullName>ECIN_Merge__c</fullName>
    <description>This field is a field used to store duplicate ECIN Numbers for duplicate check to detect Accounts as duplicates (force duplicate detection)</description>
    <label>ECIN Merge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>