force-app/main/default/objects/Account/fields/EcinNumber__c.field-meta.xml
<CustomField>
    <fullName>EcinNumber__c</fullName>
    <description>(Collection of) ECIN Number(s) of the Account</description>
    <label>ECIN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>