force-app/main/default/objects/Account/fields/EcinNumberMatch__c.field-meta.xml
<CustomField>
    <fullName>EcinNumberMatch__c</fullName>
    <description>Enclose ECIN Numbers in brackets to make it possible to match for entire numbers instead of substrings</description>
    <formula>&quot;[&quot;&amp;SUBSTITUTE(EcinNumber__c,&quot;,&quot;,&quot;],[&quot;)&amp;&quot;]&quot;</formula>
    <label>ECIN Number Match</label>
    <type>Text</type>
</CustomField>