force-app/main/default/objects/Account/fields/eCommerceB2BCustomer__c.field-meta.xml
<CustomField>
    <fullName>eCommerceB2BCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eCommerce B2B Customer</label>
    <type>Checkbox</type>
</CustomField>