force-app/main/default/objects/Account/fields/EducationType__c.field-meta.xml
<CustomField>
    <fullName>EducationType__c</fullName>
    <label>Education Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SchoolType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Part</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Dual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>