force-app/main/default/objects/Account/fields/ELO__c.field-meta.xml
<CustomField>
    <fullName>ELO__c</fullName>
    <label>ELO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ander</fullName>
            </value>
            <value>
                <fullName>Bingel</fullName>
            </value>
            <value>
                <fullName>Broekx</fullName>
            </value>
            <value>
                <fullName>iOmniwize</fullName>
            </value>
            <value>
                <fullName>Questi</fullName>
            </value>
            <value>
                <fullName>Schoolonline</fullName>
            </value>
            <value>
                <fullName>Scoodle</fullName>
            </value>
            <value>
                <fullName>Smartschool</fullName>
            </value>
            <value>
                <fullName>Wisa</fullName>
            </value>
            <value>
                <fullName>Zorgkompas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>