force-app/main/default/objects/Account/fields/ELOKindergarten__c.field-meta.xml
<CustomField>
    <fullName>ELOKindergarten__c</fullName>
    <label>ELO kindergarten</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>iKklik</fullName>
            </value>
            <value>
                <fullName>Scoodle Track</fullName>
            </value>
            <value>
                <fullName>Scoodle Track (iKklik)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>