force-app/main/default/objects/Account/fields/EmailOptOut__c.field-meta.xml
<CustomField>
    <fullName>EmailOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(R1-S1 by JD): Email Opt Out.</description>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>