force-app/main/default/objects/Account/fields/ErrorMessageForAWSUpdate__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessageForAWSUpdate__c</fullName>
    <description>Integration factory webservice error message</description>
    <label>ErrorMessageForAWSUpdate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>