force-app/main/default/objects/Account/fields/ExternalCustomerId__c.field-meta.xml
<CustomField>
    <fullName>ExternalCustomerId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Schoolnumber or any other unique identifier of the customer.</inlineHelpText>
    <label>External Customer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>