force-app/main/default/objects/Account/fields/ExternalDatabase__c.field-meta.xml
<CustomField>
    <fullName>ExternalDatabase__c</fullName>
    <label>External Database</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OperatingCompany__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agodi</fullName>
            </value>
            <value>
                <fullName>BRIN</fullName>
            </value>
            <value>
                <fullName>Informat</fullName>
            </value>
            <value>
                <fullName>RIO</fullName>
            </value>
            <value>
                <fullName>La Banque du Livre</fullName>
            </value>
            <value>
                <fullName>Skolverket</fullName>
            </value>
            <value>
                <fullName>UDB</fullName>
            </value>
            <value>
                <fullName>Bokinfo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>