force-app/main/default/objects/Account/fields/FulfillmentLocation__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentLocation__c</fullName>
    <label>Fulfillment Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CustomerCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>FulfillmentLocations</valueSetName>
    </valueSet>
</CustomField>