force-app/main/default/objects/Account/fields/FullLegalName__c.field-meta.xml
<CustomField>
    <fullName>FullLegalName__c</fullName>
    <label>Full Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>