force-app/main/default/objects/Account/fields/HasQualifiedActivity__c.field-meta.xml
<CustomField>
    <fullName>HasQualifiedActivity__c</fullName>
    <formula>ConfirmedVisits__c &gt; 0 &amp;&amp; PlannedQualifiedActivity__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Qualified Activity</label>
    <type>Checkbox</type>
</CustomField>