force-app/main/default/objects/Account/fields/HEStudentSchoolTotals__c.field-meta.xml
<CustomField>
    <fullName>HEStudentSchoolTotals__c</fullName>
    <label>HE # Student - School Totals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>