force-app/main/default/objects/Account/fields/Hfdstructuur__c.field-meta.xml
<CustomField>
    <fullName>Hfdstructuur__c</fullName>
    <label>Hfdstructuur</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>111</fullName>
            </value>
            <value>
                <fullName>121</fullName>
            </value>
            <value>
                <fullName>211</fullName>
            </value>
            <value>
                <fullName>221</fullName>
            </value>
            <value>
                <fullName>311</fullName>
            </value>
            <value>
                <fullName>312</fullName>
            </value>
            <value>
                <fullName>313</fullName>
            </value>
            <value>
                <fullName>314</fullName>
            </value>
            <value>
                <fullName>315</fullName>
            </value>
            <value>
                <fullName>316</fullName>
            </value>
            <value>
                <fullName>317</fullName>
            </value>
            <value>
                <fullName>321</fullName>
            </value>
            <value>
                <fullName>411</fullName>
            </value>
            <value>
                <fullName>416</fullName>
            </value>
            <value>
                <fullName>417</fullName>
            </value>
            <value>
                <fullName>511</fullName>
            </value>
            <value>
                <fullName>618</fullName>
            </value>
            <value>
                <fullName>A00</fullName>
            </value>
            <value>
                <fullName>B00</fullName>
            </value>
            <value>
                <fullName>BNA</fullName>
            </value>
            <value>
                <fullName>BNB</fullName>
            </value>
            <value>
                <fullName>BNC</fullName>
            </value>
            <value>
                <fullName>BND</fullName>
            </value>
            <value>
                <fullName>BNI</fullName>
            </value>
            <value>
                <fullName>BOA</fullName>
            </value>
            <value>
                <fullName>BOB</fullName>
            </value>
            <value>
                <fullName>BOC</fullName>
            </value>
            <value>
                <fullName>BOD</fullName>
            </value>
            <value>
                <fullName>BOI</fullName>
            </value>
            <value>
                <fullName>BPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>