force-app/main/default/objects/Account/fields/ILSync__c.field-meta.xml
<CustomField>
    <fullName>ILSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IL Sync</label>
    <type>Checkbox</type>
</CustomField>