force-app/main/default/objects/Account/fields/ImportNotes__c.field-meta.xml
<CustomField>
    <fullName>ImportNotes__c</fullName>
    <label>Import Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>