force-app/main/default/objects/Account/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Klopotek_Inactive__c during migration. Temp field for marketing cloud.</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>