force-app/main/default/objects/Account/fields/InvoiceEmail2__c.field-meta.xml
<CustomField>
    <fullName>InvoiceEmail2__c</fullName>
    <label>Invoice Email 2</label>
    <type>Email</type>
</CustomField>