force-app/main/default/objects/Account/fields/InvoicingEmail__c.field-meta.xml
<CustomField>
    <fullName>InvoicingEmail__c</fullName>
    <description>Default Email address used for sending Invoices to the Account.</description>
    <inlineHelpText>This is the Default Email address, used to send Invoices to.</inlineHelpText>
    <label>Invoicing Email</label>
    <type>Email</type>
</CustomField>