force-app/main/default/objects/Account/fields/InvoicingFrequency__c.field-meta.xml
<CustomField>
    <fullName>InvoicingFrequency__c</fullName>
    <defaultValue>&quot;Daily&quot;</defaultValue>
    <label>Invoicing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OperatingCompany__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Biweekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>