force-app/main/default/objects/Account/fields/IsMultiMarketGroup__c.field-meta.xml
<CustomField>
    <fullName>IsMultiMarketGroup__c</fullName>
    <description>Checks whether mutiple checkboxes have been checked. If bigger than 1, it is a multimarketgroup.</description>
    <formula>IF(
    (IF(isPrimaryEducation__c = TRUE,1,0))+
				(IF(isSecondaryEducation__c = TRUE,1,0))+
				(IF(isHigherEducation__c = TRUE,1,0))+
				(IF(isVocationalEducation__c = TRUE,1,0))+
				(IF(isProfessional__c = TRUE,1,0))
			&gt;1,
				true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field, when true, indicates that the given account has been assigned multiple market groups such as BAO, VO, HO and MBO</inlineHelpText>
    <label>Multi marketgroup</label>
    <type>Checkbox</type>
</CustomField>