force-app/main/default/objects/Account/fields/isPrimaryEducation__c.field-meta.xml
<CustomField>
    <fullName>isPrimaryEducation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Education</label>
    <type>Checkbox</type>
</CustomField>