force-app/main/default/objects/Account/fields/isProfessional__c.field-meta.xml
<CustomField>
    <fullName>isProfessional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Professional</label>
    <type>Checkbox</type>
</CustomField>