force-app/main/default/objects/Account/fields/IsSims__c.field-meta.xml
<CustomField>
    <fullName>IsSims__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SIMS</label>
    <type>Checkbox</type>
</CustomField>