force-app/main/default/objects/Account/fields/KGStudents__c.field-meta.xml
<CustomField>
    <fullName>KGStudents__c</fullName>
    <label>KG # Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>