force-app/main/default/objects/Account/fields/KGStudentSchoolTotals__c.field-meta.xml
<CustomField>
    <fullName>KGStudentSchoolTotals__c</fullName>
    <label>KG # Student - School Totals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>