force-app/main/default/objects/Account/fields/KlopotekId__c.field-meta.xml
<CustomField>
    <fullName>KlopotekId__c</fullName>
    <externalId>true</externalId>
    <label>Klopotek Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>