force-app/main/default/objects/Account/fields/KlopotekNumber__c.field-meta.xml
<CustomField>
    <fullName>KlopotekNumber__c</fullName>
    <externalId>true</externalId>
    <label>Klopotek Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>