force-app/main/default/objects/Account/fields/LastActivity90Days__c.field-meta.xml
<CustomField>
    <fullName>LastActivity90Days__c</fullName>
    <formula>if( LastActivityDate  &lt; TODAY() - 90, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastActivity90Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>