force-app/main/default/objects/Account/fields/LastAgodiUpdate__c.field-meta.xml
<CustomField>
    <fullName>LastAgodiUpdate__c</fullName>
    <inlineHelpText>The Last time this Account was updated with the Agodi Data</inlineHelpText>
    <label>Last Agodi Update</label>
    <type>Date</type>
</CustomField>