force-app/main/default/objects/Account/fields/LastModifiedUnix__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedUnix__c</fullName>
    <label>LastModifiedUnix</label>
    <length>155</length>
    <type>Text</type>
</CustomField>