force-app/main/default/objects/Account/fields/LegalName2__c.field-meta.xml
<CustomField>
    <fullName>LegalName2__c</fullName>
    <label>Legal Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>