force-app/main/default/objects/Account/fields/LegalName__c.field-meta.xml
<CustomField>
    <fullName>LegalName__c</fullName>
    <label>Legal Name (max 85 char)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>