force-app/main/default/objects/Account/fields/Length_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Length_Company_Name__c</fullName>
    <formula>LEN(concatenatedLegalName__c)&gt;45</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length Company Name</label>
    <type>Checkbox</type>
</CustomField>