force-app/main/default/objects/Account/fields/LengthExternalId__c.field-meta.xml
<CustomField>
    <fullName>LengthExternalId__c</fullName>
    <formula>LEN(ExternalCustomerId__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LengthExternalId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>