force-app/main/default/objects/Account/fields/LiberTestField__c.field-meta.xml
<CustomField>
    <fullName>LiberTestField__c</fullName>
    <description>Field to test permission sets accross Opco&apos;s</description>
    <inlineHelpText>Field to test permission sets accross Opco&apos;s</inlineHelpText>
    <label>LiberTestField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>