force-app/main/default/objects/Account/fields/LMS__c.field-meta.xml
<CustomField>
    <fullName>LMS__c</fullName>
    <label>LMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bingel Zorg</fullName>
            </value>
            <value>
                <fullName>Broekx</fullName>
            </value>
            <value>
                <fullName>Eigen systeem</fullName>
            </value>
            <value>
                <fullName>Integrado</fullName>
            </value>
            <value>
                <fullName>iOmniwize</fullName>
            </value>
            <value>
                <fullName>Onbekend</fullName>
            </value>
            <value>
                <fullName>Questi</fullName>
            </value>
            <value>
                <fullName>Schoolonline</fullName>
            </value>
            <value>
                <fullName>Schoolware</fullName>
            </value>
            <value>
                <fullName>Scoodle Track</fullName>
            </value>
            <value>
                <fullName>Scoodle Track (iO)</fullName>
            </value>
            <value>
                <fullName>Smartschool</fullName>
            </value>
            <value>
                <fullName>Zorgcompas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>