force-app/main/default/objects/Account/fields/LowerPrimaryEducation__c.field-meta.xml
<CustomField>
    <fullName>LowerPrimaryEducation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lower Primary Education</label>
    <type>Checkbox</type>
</CustomField>