force-app/main/default/objects/Account/fields/LowerSecondaryEducation__c.field-meta.xml
<CustomField>
    <fullName>LowerSecondaryEducation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lower Secondary Education</label>
    <type>Checkbox</type>
</CustomField>