force-app/main/default/objects/Account/fields/MainLocation__c.field-meta.xml
<CustomField>
    <fullName>MainLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for the Location (Vestigingen) structure</description>
    <label>Main Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Main Location)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>