force-app/main/default/objects/Account/fields/Manual_Sync_ILAddress_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Manual_Sync_ILAddress_to_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this checkbox is changed to True a flow will then force a sync of the ILAddress values back to the Account address fields</description>
    <label>Manual Sync ILAddress to Account</label>
    <type>Checkbox</type>
</CustomField>