force-app/main/default/objects/Account/fields/Manual_Sync_Shippin_ILAddress_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Manual_Sync_Shippin_ILAddress_to_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Sync Shippin ILAddress to Account</label>
    <type>Checkbox</type>
</CustomField>