force-app/main/default/objects/Account/fields/ManualCheckReason__c.field-meta.xml
<CustomField>
    <fullName>ManualCheckReason__c</fullName>
    <label>Manual Check Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>