force-app/main/default/objects/Account/fields/ManualPhoneCheck__c.field-meta.xml
<CustomField>
    <fullName>ManualPhoneCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Phone Check</label>
    <type>Checkbox</type>
</CustomField>