force-app/main/default/objects/Account/fields/MarketAccGroupOwner__c.field-meta.xml
<CustomField>
    <fullName>MarketAccGroupOwner__c</fullName>
    <formula>If(Text(OperatingCompany__c) == &apos;Noordhoff&apos;, &apos;&apos;,&apos;-&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Group Owner</label>
    <type>Text</type>
</CustomField>