force-app/main/default/objects/Account/fields/MarketSegment__c.field-meta.xml
<CustomField>
    <fullName>MarketSegment__c</fullName>
    <label>zRemove Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Primary Education</fullName>
            </value>
            <value>
                <fullName>Secondary Education</fullName>
            </value>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>Vocational Education</fullName>
            </value>
            <value>
                <fullName>MBO</fullName>
            </value>
            <value>
                <fullName>HO</fullName>
            </value>
            <value>
                <fullName>VO</fullName>
            </value>
            <value>
                <fullName>BAO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>