force-app/main/default/objects/Account/fields/MarkForDeletion__c.field-meta.xml
<CustomField>
    <fullName>MarkForDeletion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether this account is marked to be deleted in the future</description>
    <inlineHelpText>This field indicates whether this account is marked to be deleted in the future</inlineHelpText>
    <label>Mark for Deletion</label>
    <type>Checkbox</type>
</CustomField>