force-app/main/default/objects/Account/fields/MergeToMasterRecordId__c.field-meta.xml
<CustomField>
    <fullName>MergeToMasterRecordId__c</fullName>
    <description>Formula field to determine which Account should be set as the master when the record is merged</description>
    <formula>LEFT(Id,15) = LEFT(MergeToRecordId__c,15)</formula>
    <label>Merge to Master Record ID</label>
    <type>Checkbox</type>
</CustomField>