force-app/main/default/objects/Account/fields/MergeToRecordId__c.field-meta.xml
<CustomField>
    <fullName>MergeToRecordId__c</fullName>
    <description>Field to store the record ID of where the account should be merged to.</description>
    <label>Merge to Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>