force-app/main/default/objects/Account/fields/MinimisedAccountName__c.field-meta.xml
<CustomField>
    <fullName>MinimisedAccountName__c</fullName>
    <formula>LEFT(Name,83)</formula>
    <label>Minimised Account Name</label>
    <type>Text</type>
</CustomField>