force-app/main/default/objects/Account/fields/MrgSumOfBalanceAndUnbilled__c.field-meta.xml
<CustomField>
    <fullName>MrgSumOfBalanceAndUnbilled__c</fullName>
    <formula>ABS(Balance__c) + ABS(UnbilledOrders__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mrg Sum of Balance and Unbilled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>