force-app/main/default/objects/Account/fields/MunicipalityName__c.field-meta.xml
<CustomField>
    <fullName>MunicipalityName__c</fullName>
    <description>SIMLINK attribute for Liber</description>
    <externalId>true</externalId>
    <label>Municipality Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>