force-app/main/default/objects/Account/fields/NetsuiteCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteCustomerNumber__c</fullName>
    <description>Describes the Netsuite Customer Number that is being copied from the related Account Subsidiary record.</description>
    <externalId>true</externalId>
    <label>NetSuite Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>