force-app/main/default/objects/Account/fields/NetsuiteInternalId__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteInternalId__c</fullName>
    <label>Internal Customer ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>