force-app/main/default/objects/Account/fields/NetSuiteURL__c.field-meta.xml
<CustomField>
    <fullName>NetSuiteURL__c</fullName>
    <label>NetSuite URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>