force-app/main/default/objects/Account/fields/NetSuiteVendorId__c.field-meta.xml
<CustomField>
    <fullName>NetSuiteVendorId__c</fullName>
    <externalId>true</externalId>
    <label>NetSuite Vendor Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>