force-app/main/default/objects/Account/fields/NoActivity__c.field-meta.xml
<CustomField>
    <fullName>NoActivity__c</fullName>
    <formula>ISBLANK( LastActivityDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NoActivity</label>
    <type>Checkbox</type>
</CustomField>