force-app/main/default/objects/Account/fields/NoDiscountCategory__c.field-meta.xml
<CustomField>
    <fullName>NoDiscountCategory__c</fullName>
    <formula>ISBLANK(TEXT( CustomerDiscountGroup__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NoDiscountCategory</label>
    <type>Checkbox</type>
</CustomField>