force-app/main/default/objects/Account/fields/NoPupils__c.field-meta.xml
<CustomField>
    <fullName>NoPupils__c</fullName>
    <label>NoPupils</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>